--- a/locales/si.json
+++ b/locales/si.json
@@ -39,7 +39,7 @@
     "App Version": "යෙදුම් අනුවාදය",
     "General": "පොදු",
     "Welcome Back! Hi": "සාදරයෙන් පිලිගනිමු! ආයුබෝවන් ",
-    "logout": "ඉවත් වන්න",
+    "Logout": "ඉවත් වන්න",
     "system_default": "පද්ධති පෙරනිමිය",
     "profile": "පරිශීලක විස්තර",
     "home": "මුල් පිටුව",
@@ -58,7 +58,7 @@
     "Kaluthara": "කලුතර",
     "Kandy": "මහනුවර",
     "Matale": "මාතලේ",
-    "Nuwaraeliya": "නුවර එලිය",
+    "Nuwara Eliya": "නුවර එලිය",
     "Galle": "ගාල්ල",
     "Matara": "මාතර",
     "Hambanthota": "හම්බන්තොට",
@@ -66,12 +66,12 @@
     "Kilinochchi": "කිලිනොච්චි",
     "Mannar": "මන්නාරම",
     "Vavuniya": "වවුනියාව",
-    "Mulathiv": "මුලතිව්",
+    "Mulathivu": "මුලතිව්",
     "Baticoloa": "මඩකලපුව",
     "Ampara": "අම්පාර",
     "Trincomalee": "ත්‍රිකුණාමලය",
     "Kurunegala": "කුරුණෑගල",
-    "Puttlam": "පුත්තලම",
+    "Puththalama": "පුත්තලම",
     "Anuradhapura": "අනුරාධපුර",
     "Polonnaruwa": "පොලොන්නරුව",
     "Badulla": "බදුල්ල",
@@ -84,7 +84,7 @@
     "invalid_nic": "අවලංගු ජා.හැ.අංකයකි",
     "invalid_username": "අවලංගු පරිශීලක නාමයකි",
     "invalid_password": "අවලංගු මුරපදයකි",
-    "password_not_match": "මුරපද එකිනෙක නොගැලපේ",
+    "Passwords do not match.": "මුරපද එකිනෙක නොගැලපේ",
     "Invalid OTP": "අවලංගු OTP අංකයකි",
     "ok": "හරි",
     "All Complaints": "සියලුම පැමිණිලි",
@@ -150,32 +150,58 @@
     "gps_location": "GPS ස්ථානය",
     "incident_location": "සිද්ධිය වූ ස්ථානය",
     "privacy policy":"රහස්‍යතා ප්‍රතිපත්තිය",
-    "add_complaint": {
-    "title": "නව පැමිණිල්ලක් එකතු කරන්නේ කෙසේද?",
-    "login": "ඔබගේ ගිණුමට ලොග් වන්න",
-    "tap_add": "මුල් තිරයේ, පැමිණිල්ලක් එක් කරන්න හෝ ඉල්ලීමක් කරන්න මත ක්ලික් කරන්න",
-    "navigate": "පැමිණිලි අංශයට යොමු වන්න",
-    "upload_media": "ඡායාරූප/වීඩියෝ අමුණන්න, නැතිනම් ඔබට මඟ හැරිය හැක",
-    "fill_details": "පැමිණිලි විස්තර පුරවන්න (පැමිණිලි මාතෘකාව, විස්තරය ආදිය)",
-    "submit": "පෝරමය ඉදිරිපත් කරන්න. ඔබට යොමු අංකයක් ලැබෙනු ඇත."
-  },
-  "add_request": {
-    "title": "නව ඉල්ලීමක් එකතු කරන්නේ කෙසේද?",
-    "login": "ඔබගේ ගිණුමට ලොග් වන්න",
-    "tap": "'නව ඉල්ලීම' ටැබය ක්ලික් කරන්න",
-    "fill_details": "අවශ්‍ය විස්තර ලබාදෙන්න.",
-    "submit": "ඉල්ලීම ඉදිරිපත් කරන්න."
-  },
-  "review_complaints": {
-    "title": "නවතම පැමිණිලි/ඉල්ලීම් සමාලෝචනය",
-    "navigate": "'ඉතිහාසය' ටැබය වෙත යන්න.",
-    "find": "ඔබේ නවතම පැමිණිල්ල/ඉල්ලීම සොයා, තොරතුරු සඳහා එය තෝරන්න."
-  },
-  "change_language_logout": {
-    "title": "භාෂාව වෙනස් කරමින් පිටවීම",
-    "settings": "සැකසුම් විවෘත කරන්න.",
-    "language": "'භාෂාව' තෝරමින් යෙදුමේ භාෂාව වෙනස් කරන්න.",
-    "logout": "'පිටවීම' ක්ලික් කර ආරක්ෂිතව පිටවන්න."
-  }
+    
+  "add_complaint": {
+      "title": "1 .නව පැමිණිල්ලක් එකතු කරන්නේ කෙසේද?",
+      "login": "- ඔබගේ ගිණුමට ලොග් වන්න",
+      "home_tap": "- මුල් තිරයේ, පැමිණිල්ලක් එක් කරන්න හෝ ඉල්ලීමක් කරන්න මත ක්ලික් කරන්න ",
+      "fill_details": "- පැමිණිලි අංශයට යොමු වන්න",
+      "submit": "- ඡායාරූප/වීඩියෝ අමුණන්න, නැතිනම් ඔබට මඟ හැරිය හැක",
+      "submits": "- පැමිණිලි විස්තර පුරවන්න( පැමිණිලි මාතෘකාව විස්තරය ආදිය)",
+      "submits1": "- පෝරමය ඉදිරිපත් කරන්න. ඔබට යොමු අංකයක් ලැබෙනු ඇත."
+      
+    },
+    "add_request": {
+      "title": "2 .නව ඉල්ලීමක් එකතු කරන්නේ කෙසේද?",
+      "login": "-ඉල්ලීම් අංශයට යොමු වන්න..",
+      "tap": "-  ඉල්ලීමේ විස්තර පුරවන්න( ඉල්ලීම් මාතෘකාව විස්තරය ආදිය)",
+      "fill_details": "- ඔබට අවශ්‍ය නම්, ඔබට ලිපි ඡායාරූප ඇමිණිය හැකිය, නමුත් එය අනිවාර්ය නොවේ."
+      
+    },
+    "review_complaints": {
+      "title": "3. නවතම පැමිණිල්ල හෝ ඉල්ලීම විශ්ලේෂණය කරන්න",
+      "navigate": "-මුල් තිරයේ, නවතම පැමිණිල්ල හෝ  ඉල්ලීම මත ක්ලික් කරන්න ",
+      "find": "- විස්තර මත ක්ලික් කරන්න..",
+      "find1": "- පැමිණිල්ලේ තත්ත්වය සහ විස්තර බලන්න.."
+    },
+    "change_language_logout": {
+      "title": "5. භාෂාව වෙනස් කිරීම හා  ජංගම යෙදුමෙන් ඉවත්වීම",
+      "settings": "-සැකසුම් මෙනුව වෙත යන්න",
+      "language": "- යෙදුමේ භාෂාව වෙනස් කිරීමට භාෂාව තෝරන්න.",
+      "logout": "- ඉවත් වීමට, සැකසීම් මෙනුවට ගොස් ඉවත්වීම මත ක්ලික් කරන්න.."
+    },
+    "Complaint and Request History View":{
+      "title": "4 .පෙර පැමිණිලි සහ ඉල්ලීම් බැලීම",
+      "navigate": "- පෙර  පැමිණිලි /ඉල්ලීම් වෙත යොමුවන්න.",
+      "find": "- ඔබගේ අතීත පැමිණිලි සහ ඉල්ලීම් සියල්ල ලැයිස්තුවක් ලෙස බලන්න.",
+      "find1": "-සවිස්තරාත්මක තොරතුරු සහ තත්ත්වය බැලීමට ඕනෑම ඇතුළත් කිරීමක් මත ක්ලික් කරන්න."
+
+    },
+    "Thank":{
+      "title":"ශ්‍රී ලංකා මැතිවරණ කොමිෂන් සභාවේ යෙදුම භාවිතා කිරීම ගැන ඔබට ස්තූතියි! ඕනෑම ප්‍රශ්නයක් සඳහා, අපගේ සහාය කණ්ඩායම අමතන්න.."
+
+    },
+    "Learn All":"සියල්ල ඉගෙන ගන්න",
+     "Date and Time":" දිනය හා වේලාව",
+     "checkpassword":{
+      "step1":"මුරපදයේ අවම වශයෙන් අක්ෂර 8ක් අඩංගු විය යුතුය.",
+      "step2":"මුරපදයේ කැපිටල් අකුරු අඩංගු විය යුතුය.",
+      "step3":"මුරපදයේ අංක අඩංගු විය යුතුය."
+      
+    },
+    "statusdis":{
+      "NEW":"ඔබගේ පැමිණිල්ල/ඉල්ලීම මැතිවරණ කොමිසම වෙත සාර්ථකව ලැබී ඇති අතර, එය දැන් ඉදිරි ක්‍රියාමාර්ග සඳහා සකස් කෙරෙමින් පවතී",
+      "POLICE":"ඔබගේ පැමිණිල්ල අවශ්‍ය පියවර ගැනීම සඳහා ශ්‍රී ලංකා පොලිසිය වෙත යොමු කර ඇත"
+    }
   }
   
