--- a/locales/ta.json
+++ b/locales/ta.json
@@ -44,44 +44,44 @@
     "App Version": "பயன்பாட்டின் பதிப்பு",
     "General": "பொது",
     "Welcome Back! Hi": "மீண்டும் வரவேற்கிறோம்! வணக்கம்",
-    "logout": "வெளியேறு",
+    "Logout": "வெளியேறு",
     "Consent Statement": "உடன்பாட்டு அறிக்கை",
     " Do you agree to share this information, including your identity, with third parties?": "என்னால் இத்தகவல்களை எனது ஆளடையாளத்துடன் மூன்றாம் தரப்புகளுக்கு வழங்குவதற்கு",
     "Disagree": "உடன்படவில்லை",
     "Agree": "உடன்படுகின்றேன்",
     "District": "மாவட்டம்",
-    "puttlam": "வெற்றிகரமாக பதிவு செய்யப்பட்டது. நீங்கள் இப்போது உள்நுழைவு திரைக்கு மாற்றப்படுவீர்கள்.",
-    "anuradhapura": "அநுராதபுரம்",
-    "mulathiv": "முல்லைத்தீவு",
-    "baticoloa": "மட்டக்களப்பு",
-    "ampara": "அம்பாறை",
-    "polonnaruwa": "பொலன்னறுவை",
-    "badulla": "பதுளை",
-    "colombo": "கொழும்பு",
-    "gampaha": "கம்பஹா",
-    "nuwaraeliya": "நுவரெலியா",
-    "galle": "காலி",
-    "matara": "மாத்தறை",
-    "hambanthota": "ஹம்பந்கோட்டை",
-    "jaffna": "யாழ்ப்பாணம்",
-    "kaluthara": "களுத்துறை",
-    "kandy": "கண்டி",
-    "rathnapura": "இரத்தினபுரி",
-    "kegalle": "கேகாலை",
-    "trincomalee": "திருகோணமலை",
-    "kurunegala": "குருநாகல்",
-    "matale": "மாத்தளை",
-    "kilinochchi": "கிளிநொச்சி",
-    "mannar": "மன்னார்",
-    "monaragala": "மொனராகலை",
-    "vavuniya": "வவுனியா",
+    "Puththalama": "வெற்றிகரமாக பதிவு செய்யப்பட்டது. நீங்கள் இப்போது உள்நுழைவு திரைக்கு மாற்றப்படுவீர்கள்.",
+    "Anuradhapura": "அநுராதபுரம்",
+    "Mulathivu": "முல்லைத்தீவு",
+    "Baticoloa": "மட்டக்களப்பு",
+    "Ampara": "அம்பாறை",
+    "Polonnaruwa": "பொலன்னறுவை",
+    "Badulla": "பதுளை",
+    "Colombo": "கொழும்பு",
+    "Gampaha": "கம்பஹா",
+    "Nuwara Eliya": "நுவரெலியா",
+    "Galle": "காலி",
+    "Matara": "மாத்தறை",
+    "Hambanthota": "ஹம்பந்கோட்டை",
+    "Jaffna": "யாழ்ப்பாணம்",
+    "Kaluthara": "களுத்துறை",
+    "Kandy": "கண்டி",
+    "Rathnapura": "இரத்தினபுரி",
+    "Kegalle": "கேகாலை",
+    "Trincomalee": "திருகோணமலை",
+    "Kurunegala": "குருநாகல்",
+    "Matale": "மாத்தளை",
+    "Kilinochchi": "கிளிநொச்சி",
+    "Mannar": "மன்னார்",
+    "Monaragala": "மொனராகலை",
+    "Vavuniya": "வவுனியா",
     "Continue Registration": "பதிவை தொடரவும்",
     "something_went_wrong": "ஏதேனும் தவறு ஏற்பட்டுள்ளது",
     "invalid_mobile_number": "தவறான தொலைபேசி இலக்கம்",
     "invalid_nic": "தவறான தேசிய அடையாள அட்டை இலக்கம்",
     "invalid_username": "தவறான பயனர் பெயர்",
     "invalid_password": "தவறான கடவுச்சொல்",
-    "password_not_match": "கடவுச்சொற்கள் பொருந்தவில்லை",
+    "Passwords do not match.": "கடவுச்சொற்கள் பொருந்தவில்லை",
     "Invalid OTP": "தவறான OTP",
     "all_complaints": "அனைத்து முறையீடுகள்",
     "all_requests": "அனைத்து வேண்டுகோள்கள்",
@@ -120,33 +120,58 @@
     "Local Authorities Election":"உள்ளூராட்சி அதிகார சபைகள் தேர்தல்",
     "How to Add New Complaint":"புதிய முறையீடுகளை உட்சேர்ப்பது எவ்வாறு?",
     "Help Guide":"உதவி வழிகாட்டி",
-    "add_complaint": {
-    "title": "புதிய முறையீடுகளை உட்சேர்ப்பது எவ்வாறு?",
-    "login": "உங்கள் கணக்கினுள் உள்நுழையவும்",
-    "tap_add": "முகப்பு திரையில், \"முறையீடு அல்லது கோரிக்கை சேர்க்கவும்\" என்ற பொத்தானை அழுத்தவும்.",
-    "navigate": "\"முறையீடு\" பகுதிக்கு செல்லவும்.",
-    "upload_media": "முறையடைடுக்கான புகைப்படங்கள் அல்லது வீடியோக்களை பதிவேற்றம் செய்யவும், அல்லது இந்த படி முறையை தவிர்க்கவும்.",
-    "fill_details": "முறையீடு தொடர்பான விபரங்களைப் பதிவேற்றவும், தலைப்பு மற்றும் விளக்கத்தை உள்ளிடவும்.",
-    "submit": "படிவத்தை சமர்ப்பிக்கவும். உங்கள் முறையீட்டை கண்காணிக்க ஒரு குறியீட்டு எண் கிடைக்கும்."
+      
+  "add_complaint": {
+    "title": "1 .புதிய முறையீடுகளை உட்சேர்ப்பது எவ்வாறு?",
+    "login": "- உங்கள் கணக்கினுள் உள்நுழையவும்",
+    "home_tap": "- முகப்பு திரையில், முறையீடு அல்லது கோரிக்கை சேர்க்கவும் என்ற பொத்தானை அழுத்தவும். ",
+    "fill_details": "-  முறையீடு  பகுதிக்கு செல்லவும்.",
+    "submit": "- முறையடைடுக்கான புகைப்படங்கள் அல்லது வீடியோக்களை பதிவேற்றம் செய்யவும், அல்லது இந்த படி முறையை தவிர்க்கவும்",
+    "submits": "- முறையீடு தொடர்பான விபரங்களைப் பதிவேற்றவும், தலைப்பு மற்றும் விளக்கத்தை உள்ளிடவும்",
+    "submits1": "- படிவத்தை சமர்ப்பிக்கவும். உங்கள் முறையீட்டை கண்காணிக்க ஒரு குறியீட்டு எண் கிடைக்கும்"
+    
   },
   "add_request": {
-    "title": "புதிய கோரிக்கையை சேர்ப்பது எப்படி?",
-    "login": "உங்கள் கணக்கினுள் உள்நுழையவும்",
-    "tap": "'புதிய கோரிக்கை' மெனுவை தேர்வு செய்யவும்",
-    "fill_details": "தேவையான விவரங்களை உள்ளிடவும்.",
-    "submit": "கோரிக்கையை சமர்ப்பிக்கவும்."
+    "title": "2 .புதிய கோரிக்கை சேர்ப்பது எப்படி?",
+    "login": "-கோரிக்கைகள் பகுதிக்கு செல்லவும்..",
+    "tap": "-  கோரிக்கை விபரங்களை உள்ளிடவும், தலைப்பு மற்றும் விளக்கத்தை பதிவு செய்யவும்.",
+    "fill_details": "- கோரிக்கைக்கு கோப்பொன்றை இணைக்கலாம், ஆனால் இது கட்டாயமல்ல."
+    
   },
-  
-    "review_complaints": {
-      "title": "சமீபத்திய முறையீடுகளை/கோரிக்கைகளை மதிப்பாய்வு செய்யுங்கள்",
-      "navigate": "'வரலாறு' பகுதியில் செல்லவும்.",
-      "find": "உங்கள் சமீபத்திய முறையீடு/கோரிக்கையைத் தேடிக்கொண்டு விரிவான தகவலுக்காக அதைத் தேர்ந்தெடுக்கவும்."
+  "review_complaints": {
+    "title": "3. சமீபத்திய முறையீடு அல்லது கோரிக்கையை பார்வையிடுவது",
+    "navigate": "-முகப்பு திரையில், சமீபத்திய முறையீடு / கோரிக்கை என்ற பகுதியைத் அழுத்தவும். ",
+    "find": "- விபரங்கள் பொத்தானை அழுத்தவும்..",
+    "find1": "- உங்கள் முறையீடு அல்லது கோரிக்கையின் நிலை மற்றும் விபரங்களை பார்வையிடவும்."
+  },
+  "change_language_logout": {
+    "title": "5. மொழியை மற்றுதல் மற்றும் வெளியேறல்",
+    "settings": "-அமைப்புகள் மெனுவுக்கு செல்லவும்.",
+    "language": "- மொழி ஐ தேர்ந்தெடுத்து பயன்பாட்டின் மொழியை மாற்றவும்.",
+    "logout": "- வெளியேறுவதற்கு, அமைப்புகள் மெனுவுக்கு சென்று வெளியேறு என்ற பொத்தானை அழுத்தவும்."
+  },
+  "Complaint and Request History View":{
+    "title": "4 .முறையீடு மற்றும் கோரிக்கை வரலாற்றைப் பார்வையிடுவது எவ்வாறு",
+    "navigate": "-வரலாறு பகுதியைத் தேர்ந்தெடுக்கவும்.",
+    "find": "- உங்கள் அனைத்து முந்தைய முறையீடுகள் மற்றும் கோரிக்கைகள் பட்டியலைப் பார்வையிடவும்..",
+    "find1": "-எந்தவொரு பதிவையும் தட்டச்சு செய்வதன் மூலம் விபரங்கள் மற்றும் நிலைமையை பார்வையிடவும்"
+
+  },
+  "Thank":{
+      "title":"இலங்கை தேர்தல் ஆணைக்குழுவின் செயலியைப் பயன்படுத்தியதற்கு நன்றி!      தங்களின் எந்தவொரு கேள்விகளுக்கும், எங்கள் ஆதரவு குழுவைத் தொடர்பு கொள்ளலாம்."
+
     },
-    "change_language_logout": {
-      "title": "மொழியை மாற்றுவது மற்றும் வெளியேறுவது எப்படி?",
-      "settings": "அமைப்புகளைத் திறக்கவும்.",
-      "language": "'மொழி' தேர்வை மாற்றவும்.",
-      "logout": "'வெளியேறு' என்பதைத் தேர்ந்தெடுத்து பாதுகாப்பாக வெளியேறவும்."
+    "Learn All":"அனைத்தையும் அறிந்து கொள்ளுங்கள்",
+     "Date and Time":"திகதி மற்றும் நேரம்",
+  "checkpassword":{
+      "step1":" பாஸ்வேட்டில் ஆகக்குறைந்தது 8 எழுத்துக்கள் உள்ளடங்க வேண்டும்",
+      "step2":"பாஸ்வேட்டில் கபிட்டல்  எழுத்து உள்ளடங்க வேண்டும்",
+      "step3":"பாஸ்வேட்டில் இலக்கம் உள்ளடங்க வேண்டும்"
+      
+    },
+    "statusdis":{
+      "NEW":"உங்கள் முறைப்பாடு/கோரிக்கை தேர்தல் ஆணைக்குழுவால் வெற்றிகரமாகப் பெறப்பட்டது, மேலும் அது இப்போது அடுத்த நடவடிக்கைக்காகச் செயல்படுத்தப்படுகிறது",
+      "POLICE":"உங்கள் முறைப்பாடு தேவையான நடவடிக்கைக்காக இலங்கை பொலீஸ்  நிலையத்திற்கு அனுப்பப்பட்டுள்ளது"
     }
   
   
